# Esp32-AiControlHardware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: AIController.cpp  AIController.hpp  App.cpp  App.hpp  CMakeLists.txt  GPIOManager.cpp  GPIOManager.hpp  NVSManager.cpp  NVSManager.hpp  WebServerManager.cpp  WebServerManager.hpp  WiFiManager.cpp  WiFiManager.hpp  app_main.cpp  idf_component.yml
main/html/: chat.html  root.html
partitions/: 16m.csv  4m.csv
